# MEMEX

./: .env.example  .gitignore  .lintstagedrc.json  ARCHITECTURE.md  DEMO_SCRIPT.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_auth_tables.py  003_add_memory_event_table.py  004_add_trails_entities.py  005_add_source_import.py  006_add_agent_tables.py  007_add_collaboration_tables.py
apps/api/app/: config.py  main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/database/: base.py  session.py
apps/api/app/interfaces/: __init__.py  ai_service.py  cognee_service.py  knowledge_graph.py  memory_service.py  memory_timeline.py
apps/api/app/models/: __init__.py  agent.py  collaboration.py  entity.py  memory.py  memory_event.py  memory_trail.py  organization.py  organization_member.py  project.py  session.py  source_import.py  user.py  verification_token.py
apps/api/app/schemas/: __init__.py  agent.py  auth.py  collaboration.py  entity.py  graph.py  memory.py  profile.py  project.py  reasoning.py  source_import.py  trail.py  workspace.py
apps/api/app/services/: agent_collaboration.py  agent_decision_history.py  agent_observability.py  agent_registry.py  agent_task_history.py  agent_workflow.py  audit.py  background_import.py  cognee_adapter.py  collaboration.py  email.py  embedding.py  entity_enrichment.py  entity_store.py  export.py  knowledge.py  (+20 more)
apps/api/tests/: conftest.py
(+88 files in other folders)
